--- a/bin/buildall.in
+++ b/bin/buildall.in
@@ -1,28 +1,33 @@
 #!/bin/bash
 # shellcheck disable=SC1091
-TO_BUILD=(dr460nized dr460nized-gaming xfce gnome kde-lite hyprland cinnamon i3 sway mokka)
+TO_BUILD=(xfce gnome kde cinnamon i3 sway)
 
 if [[ ! -v BUILDALL_TIMESTAMP ]]; then
     BUILDALL_TIMESTAMP="$(date +%y%m%d)"
 fi
 
 build_edition() {
-    if ! test -f /var/cache/garuda-tools/garuda-builds/iso/"$1"/"$2"/"$BUILDALL_TIMESTAMP"/*.iso; then
+    if ! test -f /var/cache/distro-tools/distro-builds/iso/"$1"/"$2"/"$BUILDALL_TIMESTAMP"/*.iso; then
         if ! buildiso -p "$2" -T "$BUILDALL_TIMESTAMP"; then
             echo "$2 ISO building failed. Manual intervention required!" | apprise -vv "${TELEGRAM}" -t "ISO build failed!"
-            echo "$2" >> /var/cache/garuda-tools/rebuild_needed.log
+            echo "$2" >> /var/cache/distro-tools/rebuild_needed.log
         fi
     fi
 
-    rm -rf --one-file-system /var/cache/garuda-tools/garuda-chroots/buildiso/*
+    rm -rf --one-file-system /var/cache/distro-tools/persianosx-chroots/buildiso/*
 }
 
 # Initialize building
-rm -rf --one-file-system /var/cache/garuda-tools/garuda-chroots/buildiso/*
+rm -rf --one-file-system /var/cache/distro-tools/persianosx-chroots/buildiso/*
 buildiso -i
-source /var/cache/garuda-tools/garuda-builds/.env
+source /var/cache/distro-tools/garuda-builds/.env
 
 # Build our ISO's 
 for edition in "${TO_BUILD[@]}"; do
     build_edition garuda "$edition"
 done
+
+
+#garuda-tools >>>> distro-tools
+#garuda-builds >>>>  distro-builds
+#garuda-chroots >>>> persianosx-chroots
