change garuda to distro

--- a/bin/checksumiso.in
+++ b/bin/checksumiso.in
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-LIBDIR='/usr/lib/garuda-tools'
+LIBDIR='/usr/lib/distro-tools'
 
 [[ -r ${LIBDIR}/util-msg.sh ]] && source ${LIBDIR}/util-msg.sh
 
