--- a/bin/chroot-run.in
+++ b/bin/chroot-run.in
@@ -123,9 +123,9 @@ chroot_extra_umount() {
 umask 0022
 
 # Sanity check
-if [[ ! -f "$working_dir/.garuda-tools" ]]; then
+if [[ ! -f "$working_dir/.distro-tools" ]]; then
     die "'%s' does not appear to be a garuda chroot." "$working_dir"
-elif [[ $(cat "$working_dir/.garuda-tools") != $version ]]; then
+elif [[ $(cat "$working_dir/.distro-tools") != $version ]]; then
     die "chroot '%s' is not at version %s. Please rebuild." "$working_dir" "$version"
 fi
 
