--- a/bin/buildpkg.in
+++ b/bin/buildpkg.in
@@ -68,7 +68,7 @@ display_settings(){
 
 load_user_info
 
-load_config "${USERCONFDIR}/garuda-tools.conf" || load_config "${SYSCONFDIR}/garuda-tools.conf"
+load_config "${USERCONFDIR}/distro-tools.conf" || load_config "${SYSCONFDIR}/distro-tools.conf"
 load_vars "$USER_HOME/.makepkg.conf" || load_vars /etc/makepkg.conf
 
 clean_first=false
