--- a/bin/buildtree.in
+++ b/bin/buildtree.in
@@ -36,7 +36,7 @@ display_settings(){
 
 load_user_info
 
-load_config "${USERCONFDIR}/garuda-tools.conf" || load_config "${SYSCONFDIR}/garuda-tools.conf"
+load_config "${USERCONFDIR}/distro-tools.conf" || load_config "${SYSCONFDIR}/distro-tools.conf"
 
 #sync=false
 pretend=false
