--- a/bin/check-yaml.in
+++ b/bin/check-yaml.in
@@ -79,7 +79,7 @@ display_settings(){
 
 load_user_info
 
-load_config "${USERCONFDIR}/garuda-tools.conf" || load_config "${SYSCONFDIR}/garuda-tools.conf"
+load_config "${USERCONFDIR}/distro-tools.conf" || load_config "${SYSCONFDIR}/distro-tools.conf"
 
 # to force old way to have buildiso run in iso-profiles dir
 # run_dir=$(pwd)
