--- a/data/garuda-tools.conf
+++ b/data/garuda-tools.conf
@@ -1,5 +1,5 @@
 ######################################################
-################ garuda-tools.conf ##################
+################ distro-tools.conf ##################
 ######################################################
 
 # default target branch
@@ -9,23 +9,23 @@
 # target_arch=$(uname -m)
 
 # cache dir where buildpkg, buildtree cache packages/pkgbuild, builiso iso files
-# cache_dir=/var/cache/garuda-tools/garuda-builds
+# cache_dir=/var/cache/distro-tools/distro-builds
 
 # build dir where buildpkg or buildiso chroots are created
-# chroots_dir=/var/cache/garuda-tools/garuda-chroots
+# chroots_dir=/var/cache/distro-tools/persianosx-chroots
 
 # log dir where log files are created
-# log_dir='/var/cache/garuda-tools/garuda-logs'
+# log_dir='/var/cache/distro-tools/persianosx-logs'
 
 # custom build mirror server
 # build_mirror=https://mirrors.kernel.org
 
 ################ buildtree ###############
 
-# garuda package tree
+# gpersianosx package tree
 # repo_tree=('core' 'extra' 'community' 'multilib')
 
-# host_tree=https://gitlab.com/garuda-linux
+# host_tree=https://gitlab.com/persianosx
 
 # default https seems slow; try this
 # host_tree_abs=git://projects.archlinux.org/svntogit
@@ -108,7 +108,7 @@
 # use alternative storage server (one or the other might be more stable)
 # alt_storage=false
 
-# the server project: garuda|garuda-community
+# the server project: persianosx|persianosx-community
 # determined automatically based on profile if unset
 # project="[SetProject]"
 
