--- a/data/profile.conf.example
+++ b/data/profile.conf.example
@@ -43,7 +43,7 @@
 # geoip="true"
 
 # unset defaults to given value
-# plymouth_theme="garuda"
+# plymouth_theme="persianosx"
 
 
 # unset defaults to given values
@@ -55,7 +55,7 @@
 # addgroups="lp,network,power,sys, wheel"
 
 # the same workgroup name if samba is used
-# smb_workgroup="garuda"
+# smb_workgroup="persianosx"
 
 # default system shell is bash
 # '/etc/defaults/useradd': " "
@@ -66,18 +66,18 @@
 ################# live-session #################
 
 # unset defaults to given value
-# hostname="garuda"
+# hostname="persianosx"
 
 # unset defaults to given value
-# username="garuda"
+# username="persianosx"
 
 # unset defaults to given value
-# password="garuda"
+# password="persianosx"
 
 # unset defaults to given values
 # names must match systemd service names
 # services in enable_systemd array don't need to be listed here
-# enable_systemd_live=('garuda-live' 'ght-live' 'pacman-init' 'mirrors-live')
+# enable_systemd_live=('persianosx-live' 'ght-live' 'pacman-init' 'mirrors-live')
 
 # disable_systemd_live=()
 
