--- a/bin/distro-chroot.in
+++ b/bin/distro-chroot.in
@@ -35,7 +35,7 @@ display_settings(){
 
 load_user_info
 
-load_config "${USERCONFDIR}/garuda-tools.conf" || load_config "${SYSCONFDIR}/garuda-tools.conf"
+load_config "${USERCONFDIR}/distro-tools.conf" || load_config "${SYSCONFDIR}/distro-tools.conf"
 
 automount=false
 pretend=false
