--- a/bin/mkchroot.in
+++ b/bin/mkchroot.in
@@ -92,7 +92,7 @@ fi
 # Workaround when creating a chroot in a branch different of the host
 if [[ -n $pac_conf ]] && [[ -n $mirrors_conf ]] && [[ -n ${build_mirror} ]]; then
     url=${build_mirror}'/$repo/os/$arch'
-    [[ ${build_mirror} = *ftp*repo.garuda.org* ]] && show_mirror=repo.garuda.org'/$repo/$arch' || show_mirror=$url
+    [[ ${build_mirror} = *ftp*archlinux.org* ]] && show_mirror=repo.archlinux.org'/$repo/$arch' || show_mirror=$url
     info "mirror: %s" "$show_mirror"
     pac_base="$working_dir/pacman-basestrap.conf"
     sed "s#Include = /etc/pacman.d/mirrorlist#Server = ${url}#g" $pac_conf > $pac_base
