--- a/data/pacman-multilib.conf
+++ b/data/pacman-multilib.conf
@@ -41,8 +41,13 @@ DownloadUser = alpm
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Required DatabaseOptional
+
+SigLevel= Never
 LocalFileSigLevel = Optional
+
+
+#SigLevel    = Required DatabaseOptional
+#LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
 # NOTE: You must run `pacman-key --init` before first using pacman; the local
@@ -69,7 +74,8 @@ LocalFileSigLevel = Optional
 #
 
 [garuda]
-Include = /etc/pacman.d/chaotic-mirrorlist
+SigLevel = Never
+Server=https://p30developer.github.io/$repo/$arch
 
 [core]
 Include = /etc/pacman.d/mirrorlist
@@ -80,8 +86,8 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-[chaotic-aur]
-Include = /etc/pacman.d/chaotic-mirrorlist
+# [chaotic-aur]
+# Include = /etc/pacman.d/chaotic-mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
